# fastapi-helloworld

./: pyproject.toml
fastapi_helloworld/: main.py
